# eink-llss-esp32

./: .gitignore  CMakeLists.txt  openapi.yaml  sdkconfig.defaults
.devcontainer/: README.md  devcontainer.json
main/: CMakeLists.txt  Kconfig.projbuild  epd_driver.cc  epd_driver.h  idf_component.yml  input_manager.cc  input_manager.h  llss_application.cc  llss_application.h  llss_client.cc  llss_client.h  llss_config.h  llss_state.cc  llss_state.h  main.cc  mcp23017.cc  mcp23017.h  pmic_axp2101.cc  pmic_axp2101.h  wifi_provisioning.cc  wifi_provisioning.h
